@@ -5,7 +5,8 @@ Changelog
 1.11.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Fix jsondetails function, so it doesn't crash when not finding scales.
+  [tschanzt]
 
 
 1.11.0 (2015-09-08)
